--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                                     <h3>We'd love to have you sponsor our event. Find out more below.</h3>
                                 </div>
                             </div>
-                            <div class="row bigbtn">
-                                <div class="col-md-offset-2 col-md-4">
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4  bigbtn">
                                     <a href="mailto:sponsors@hacknc.us" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Sponsor</a>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 bigbtn">
                                     <a href="https://drive.google.com/file/d/0B47KHViagjO6S2g4THBaM091TjQ/edit?usp=sharing" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Packages</a>
                                 </div>
 
