--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="HackNC Website">
     <meta name="author" content="Chris Hendel">
     <link rel="shortcut icon" href="">
@@ -18,13 +18,15 @@
     <header id="headline">
         <div class="row" id="full-width">
             <div class="col-md-12" id="tagline">
-                <h1>HackNC</h1>
+                <div class="container">
+                    <img src="images/logo_white.png" alt="hacknc logo" class="img-responsive topimg">
+                </div>
             </div>
         </div>
     </header>
 
     <div id="content">
-        <div id="nav" data-spy="affix" data-offset-top="400">
+        <div id="nav" data-spy="affix" data-offset-top="300">
             <nav class="navbar navbar-affix-top navbar" role="navigation">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -33,17 +35,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#about">
-                        <img src="images/hacknc-logo.png">
+                    <a class="brand">
+                        <img src="images/logo_purple.png" alt="hacknc logo" class="img-responsive navimg">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="#about">About</a>
+                        <li><a href="#register">Register</a>
                         </li>
                         <li><a href="#faq">FAQ</a>
-                        </li>
-                        <li><a href="#register">Register</a>
                         </li>
                         <li><a href="#sponsor">Sponsor</a>
                         </li>
@@ -52,19 +52,20 @@
             </nav>
         </div>
 
-        <div class="row" id="about">
+        <div class="row anchor" id="register">
             <div class="col-md-offset-2 col-md-8">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <div class="about anchor" id="register">
+                        <div class="space"></div>
+                        <div class="about anchor">
                             <h2>Ready to hack?</h2>
                             <hr>
                             <p>
-                                <span class="num">24</span> hours</p>
+                                <span class="num">24 </span>hours</p>
                             <p>
-                                <span class="num">200+</span> hackers</p>
+                                <span class="num">200+ </span>hackers</p>
                             <p>
-                                <span class="num">$10000+</span> in prizes</p>
+                                <span class="num">$10000+ </span>in prizes</p>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-8">
                                     <p>Everything happens March 1-2 @ UNC-CH</p>
@@ -80,7 +81,7 @@
                             <h2>Frequently Asked Questions</h2>
                             <hr>
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-offset-2 col-md-4">
                                     <h3>What's going to happen?</h3>
                                     <p>A 24 hour period of non-stop hacking during which you will become a better programmer, meet like-minded people, and make cool stuff. At the end, you and your group will have the chance to show off your project and receive prizes from sponsors.</p>
                                 </div>
@@ -88,17 +89,19 @@
                                     <h3>Who can attend?</h3>
                                     <p>All university students are welcome. Professionals in the area should email us about competing or mentoring. High school students under the age of 18 should also email us.</p>
                                 </div>
-                                <div class="col-md-4">
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4">
                                     <h3>What can I hack?</h3>
                                     <p>HackNC is a software only hackathon. Code for web, mobile, and desktop to your heart's content.</p>
                                 </div>
-                            </div>
-                            <div class="row">
                                 <div class="col-md-4">
                                     <h3>Can we build off existing code?</h3>
                                     <p>You’re free to brainstorm ahead of time, but all code presented at the end of HackNC must be new.</p>
                                 </div>
-                                <div class="col-md-4">
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4">
                                     <h3>Will there be food?</h3>
                                     <p>Of course! All participants well get free lunch and dinner on Saturday, breakfast and lunch on Sunday, and copious snacks throughout.</p>
                                 </div>
@@ -108,7 +111,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-offset-2 col-md-4">
                                     <h3>Do I need programming experience?</h3>
                                     <p>Nope. HackNC is a great way to hone existing programming skills or learn new ones. We’ll have mentors to help you along the way.</p>
                                 </div>
@@ -116,7 +119,9 @@
                                     <h3>Do I sign up as an individual or with a group?</h3>
                                     <p>Everyone will sign up as an individual. You can declare a 2-4 member team on our pre-event survey or form a group at the beginning of the event.</p>
                                 </div>
-                                <div class="col-md-4">
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
                                     <h3>Will there be swag (free stuff)?</h3>
                                     <p>Does a ten pound bag of flour make a really big biscuit?</p>
                                 </div>
@@ -160,14 +165,11 @@
         </div>
         <!-- End Content -->
     </div>
-
     <footer class="footer">
-        <span>HackNC &copy; 2013 </span> |
+        <span>HackNC &copy; 2013</span> |
         <span> site by <a href="http://www.chrishendel.com" target="_blank">Chris Hendel</a>
         </span>
     </footer>
-
     <script type="text/javascript" src="js/build/production.min.js"></script>
 </body>
-
 </html>
