--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="brand">
-                        <img src="images/logo_purple.png" alt="hacknc logo" class="img-responsive navimg">
+                        <img src="images/logo_purple_crop.png" alt="hacknc logo" class="img-responsive navimg">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
