Added sponsor logos.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <p>
                                 <span class="num">200+ </span>hackers</p>
                             <p>
-                                <span class="num">$10000+ </span>in prizes</p>
+                                <span class="num">$1000+ </span>in prizes</p>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-8">
                                     <p>Everything happens March 1-2 @ UNC-CH</p>
@@ -93,7 +93,7 @@
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-4">
                                     <h3>What can I hack?</h3>
-                                    <p>HackNC is a software only hackathon. Code for web, mobile, and desktop to your heart's content.</p>
+                                    <p>HackNC is both a software and hardware hackathon. Code for web, mobile, desktop, and hack away at hardware to your heart's content.</p>
                                 </div>
                                 <div class="col-md-4">
                                     <h3>Can we build off existing code?</h3>
@@ -128,6 +128,40 @@
                             </div>
                         </div>
                         <div class="sponsor anchor" id="sponsor">
+                            <h2>Sponsors</h2>
+                            <hr>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/bitpay.png" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/emc.jpg" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/google.png" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/redventures.png" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/pebble.png" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sponsor anchor" id="sponsor">
                             <h2>Want to sponsor?</h2>
                             <hr>
                             <div class="row">
@@ -142,7 +176,6 @@
                                 <div class="col-md-4 bigbtn">
                                     <a href="https://drive.google.com/file/d/0B47KHViagjO6S2g4THBaM091TjQ/edit?usp=sharing" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Packages</a>
                                 </div>
-
                             </div>
                         </div>
                         <div class="contact anchor" id="contact">
@@ -155,7 +188,7 @@
                             </div>
                             <div class="row bigbtn">
                                 <div class="col-md-offset-4 col-md-4">
-                                    <a href="mailto:anything@hacknc.us" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Contact</a>
+                                    <a href="mailto:contact@hacknc.us" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Contact</a>
                                 </div>
                             </div>
                         </div>
@@ -166,10 +199,11 @@
         <!-- End Content -->
     </div>
     <footer class="footer">
-        <span>HackNC &copy; 2013</span> |
-        <span> site by <a href="http://www.chrishendel.com" target="_blank">Chris Hendel</a>
+        <span>HackNC &copy; 2013</span>|
+        <span>site by <a href="http://www.chrishendel.com" target="_blank">Chris Hendel</a>
         </span>
     </footer>
     <script type="text/javascript" src="js/build/production.min.js"></script>
 </body>
+
 </html>
