--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row" id="full-width">
             <div class="col-md-12" id="tagline">
                 <div class="container">
-                    <img src="images/logo_white.png" alt="hacknc logo" class="img-responsive topimg">
+                    <img src="images/logo_horizontal.png" alt="hacknc logo" class="img-responsive topimg">
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="brand">
-                        <img src="images/logo_purple_crop.png" alt="hacknc logo" class="img-responsive navimg">
+                        <img src="images/logo_purple.png" alt="hacknc logo" class="img-responsive navimg">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
