Update logo to transparent background.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row" id="full-width">
             <div class="col-md-12" id="tagline">
                 <div class="container">
-                    <img src="images/logo_horizontal.png" alt="hacknc logo" class="img-responsive topimg">
+                    <img src="images/logo_horizontal_transparent.png" alt="hacknc logo" class="img-responsive topimg">
                 </div>
             </div>
         </div>
