Removed navbar and changed About text.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div id="content">
-        <div id="nav" data-spy="affix" data-offset-top="300">
+        <!-- <div id="nav" data-spy="affix" data-offset-top="300">
             <nav class="navbar navbar-affix-top navbar" role="navigation">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -50,25 +50,23 @@
                     </ul>
                 </div>
             </nav>
-        </div>
+        </div> -->
 
         <div class="row anchor" id="register">
             <div class="col-md-offset-2 col-md-8">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <div class="space"></div>
+                        <!-- <div class="space"></div> -->
                         <div class="about anchor">
-                            <h2>Ready to hack?</h2>
-                            <hr>
+                            <h2>Welcome to hacker country.</h2>
+                           <hr>
                             <p>
-                                <span class="num">24 </span>hours</p>
+                                <span class="num">250</span>students</p>
                             <p>
-                                <span class="num">200+ </span>hackers</p>
-                            <p>
-                                <span class="num">$1000+ </span>in prizes</p>
+                                <span class="num">24</span>hours</p>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-8">
-                                    <p>Everything happens March 1-2 @ UNC-CH</p>
+                                    <p>March 1-2 @ UNC-Chapel Hill</p>
                                 </div>
                             </div>
                             <div class="row bigbtn">
@@ -152,12 +150,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/pebble.png" alt="" class="img-responsive">
+                                    <img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive">
+                                    <img src="images/sponsors/pebble.png" alt="" class="img-responsive">
                                 </div>
                             </div>
                         </div>
