--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                         <!-- <div class="space"></div> -->
                         <div class="about anchor">
                             <h2>Welcome to hacker country.</h2>
-                           <hr>
+                            <hr>
                             <p>
-                                <span class="num">250</span>students</p>
+                                <span class="num">250</span> students</p>
                             <p>
-                                <span class="num">24</span>hours</p>
+                                <span class="num">24</span> hours</p>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-8">
                                     <p>March 1-2 @ UNC-Chapel Hill</p>
@@ -158,6 +158,16 @@
                                     <img src="images/sponsors/pebble.png" alt="" class="img-responsive">
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/sendgrid.png" alt="" class="img-responsive">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive">
+                                </div>
+                            </div>
                         </div>
                         <div class="sponsor anchor" id="sponsor">
                             <h2>Want to sponsor?</h2>
@@ -197,7 +207,7 @@
         <!-- End Content -->
     </div>
     <footer class="footer">
-        <span>HackNC &copy; 2013</span>|
+        <span>HackNC &copy; 2013 </span>| 
         <span>site by <a href="http://www.chrishendel.com" target="_blank">Chris Hendel</a>
         </span>
     </footer>
