--- a/index.html
+++ b/index.html
@@ -75,6 +75,63 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="sponsor anchor" id="sponsor">
+                            <h2>Sponsors</h2>
+                            <hr>
+                            <div class="row">
+                                <div class="col-md-offset-3 col-md-6">
+                                    <a href="https://bitpay.com/" target="_blank"><img src="images/sponsors/bitpay.png" alt="" class="img-responsive"></a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4">
+                                    <a href="http://www.emc.com" target="_blank"><img src="images/sponsors/emc.jpg" alt="" class="img-responsive" id="emc"></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="http://www.google.com" target="_blank"><img src="images/sponsors/google.png" alt="" class="img-responsive" id="google"></a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4">
+                                    <a href="http://www.redventures.com" target="_blank"><img src="images/sponsors/redventures.png" alt="" class="img-responsive" id="redventures"></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="http://www.carolinacreates.unc.edu/" target="_blank"><img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive" id="cc"></a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4">
+                                    <a href="http://www.getpebble.com" target="_blank"><img src="images/sponsors/pebble.png" alt="" class="img-responsive" id="pebble"></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="http://www.sendgrid.com" target="_blank"><img src="images/sponsors/sendgrid.png" alt="" class="img-responsive" id="sendgrid"></a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <a href="http://www.modolabs.com" target="_blank"><img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive" id="modolabs"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sponsor anchor" id="sponsor">
+                            <h2>Want to sponsor?</h2>
+                            <hr>
+                            <div class="row">
+                                <div class="col-md-offset-3 col-md-6">
+                                    <h3>We'd love to have you sponsor our event. Find out more below.</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4  bigbtn">
+                                    <a href="mailto:sponsors@hacknc.us" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Sponsor</a>
+                                </div>
+                                <div class="col-md-4 bigbtn">
+                                    <a href="https://drive.google.com/file/d/0B47KHViagjO6S2g4THBaM091TjQ/edit?usp=sharing" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Packages</a>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="faq anchor" id="faq">
                             <h2>Frequently Asked Questions</h2>
                             <hr>
@@ -125,67 +182,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sponsor anchor" id="sponsor">
-                            <h2>Sponsors</h2>
-                            <hr>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/bitpay.png" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/emc.jpg" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/google.png" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/redventures.png" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/pebble.png" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/sendgrid.png" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-4 col-md-4">
-                                    <img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sponsor anchor" id="sponsor">
-                            <h2>Want to sponsor?</h2>
-                            <hr>
-                            <div class="row">
-                                <div class="col-md-offset-3 col-md-6">
-                                    <h3>We'd love to have you sponsor our event. Find out more below.</h3>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-2 col-md-4  bigbtn">
-                                    <a href="mailto:sponsors@hacknc.us" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Sponsor</a>
-                                </div>
-                                <div class="col-md-4 bigbtn">
-                                    <a href="https://drive.google.com/file/d/0B47KHViagjO6S2g4THBaM091TjQ/edit?usp=sharing" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Packages</a>
-                                </div>
-                            </div>
-                        </div>
+                        
                         <div class="contact anchor" id="contact">
                             <h2>Get in touch</h2>
                             <hr>
