--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <title>HackNC</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="HackNC Website">
     <meta name="author" content="Chris Hendel">
-    <link rel="shortcut icon" href="">
+	<link rel="shortcut icon" href="favicon.ico">
     <link href="css/build/production.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.0/holder.js"></script>
