Added Metlife, Infusion, Metlife, and Monster Energy.
Added 10px padding above and below logos to improve logo spacing.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,22 @@
                                     <a href="http://www.sendgrid.com" target="_blank"><img src="images/sponsors/sendgrid.png" alt="" class="img-responsive" id="sendgrid"></a>
                                 </div>
                             </div>
+							<div class="row">
+                                <div class="col-md-offset-2 col-md-4">
+                                    <a href="http://www.infusion.com" target="_blank"><img src="images/sponsors/infusion.png" alt="" class="img-responsive" id="infusion"></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="http://www.metlife.com" target="_blank"><img src="images/sponsors/metlife.png" alt="" class="img-responsive" id="metlife"></a>
+                                </div>
+                            </div>
+							<div class="row">
+                                <div class="col-md-offset-2 col-md-4">
+                                    <a href="http://www.kitware.com" target="_blank"><img src="images/sponsors/kitware.png" alt="" class="img-responsive" id="kitware"></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="http://www.monsterenergy.com" target="_blank"><img src="images/sponsors/monsterenergy.png" alt="" class="img-responsive" id="monsterenergy"></a>
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-md-offset-4 col-md-4">
                                     <a href="http://www.modolabs.com" target="_blank"><img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive" id="modolabs"></a>
