--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/build/production.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.0/holder.js"></script>
+	<title>HackNC</title>
 </head>
 
 <body data-spy="scroll" data-target="#nav" data-offset="400">
