--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                                     <a href="http://www.monsterenergy.com" target="_blank"><img src="images/sponsors/monsterenergy.png" alt="" class="img-responsive" id="monsterenergy"></a>
                                 </div>
                             </div>
+							<div class="row">
+                                <div class="col-md-offset-3 col-md-6">
+                                    <a href="http://innovate.unc.edu" target="_blank"><img src="images/sponsors/innovatecarolina.jpg" alt="" class="img-responsive" id="innovatecarolina"></a>
+                                </div>
+							</div>
                             <div class="row">
                                 <div class="col-md-offset-4 col-md-4">
                                     <a href="http://www.modolabs.com" target="_blank"><img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive" id="modolabs"></a>
