--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                             </div>
                             <div class="row bigbtn">
                                 <div class="col-md-offset-2 col-md-4">
-                                    <a href="docs/HackNC_Maps.pdf" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Schedule</a>
+                                    <a href="docs/HackNC_Schedule.pdf" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Schedule</a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="docs/HackNC_Schedule.pdf" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Area Maps</a>
+                                    <a href="docs/HackNC_Maps.pdf" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Area Maps</a>
                                 </div>
 							</div>
                         </div>
