Squashed some bugs.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
     <link href="css/build/production.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.0/holder.js"></script>
-	<title>HackNC</title>
+    <title>HackNC</title>
 </head>
 
 <body data-spy="scroll" data-target="#nav" data-offset="400">
@@ -75,14 +74,14 @@
                                     <a href="http://www.eventbrite.com/e/hacknc-tickets-9885112638" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Register Now</a>
                                 </div>
                             </div>
-                            <div class="row bigbtn">
-                                <div class="col-md-offset-2 col-md-4">
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-4 bigbtn">
                                     <a href="docs/HackNC_Schedule.pdf" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Schedule</a>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 bigbtn">
                                     <a href="docs/HackNC_Maps.pdf" target="_blank" class="btn btn-primary btn-lg btn-lg-text btn-block">Area Maps</a>
                                 </div>
-							</div>
+                            </div>
                         </div>
 
                         <div class="sponsor anchor" id="sponsor">
@@ -90,57 +89,83 @@
                             <hr>
                             <div class="row">
                                 <div class="col-md-offset-3 col-md-6">
-                                    <a href="https://bitpay.com/" target="_blank"><img src="images/sponsors/bitpay.png" alt="" class="img-responsive"></a>
+                                    <a href="https://bitpay.com/" target="_blank">
+                                        <img src="images/sponsors/bitpay.png" alt="" class="img-responsive">
+                                    </a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-4">
-                                    <a href="http://www.emc.com" target="_blank"><img src="images/sponsors/emc.jpg" alt="" class="img-responsive" id="emc"></a>
+                                    <a href="http://www.emc.com" target="_blank">
+                                        <img src="images/sponsors/emc.jpg" alt="" class="img-responsive" id="emc">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="http://www.google.com" target="_blank"><img src="images/sponsors/google.png" alt="" class="img-responsive" id="google"></a>
+                                    <a href="http://www.google.com" target="_blank">
+                                        <img src="images/sponsors/google.png" alt="" class="img-responsive" id="google">
+                                    </a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-4">
-                                    <a href="http://www.redventures.com" target="_blank"><img src="images/sponsors/redventures.png" alt="" class="img-responsive" id="redventures"></a>
+                                    <a href="http://www.redventures.com" target="_blank">
+                                        <img src="images/sponsors/redventures.png" alt="" class="img-responsive" id="redventures">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="http://www.carolinacreates.unc.edu/" target="_blank"><img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive" id="cc"></a>
+                                    <a href="http://www.carolinacreates.unc.edu/" target="_blank">
+                                        <img src="images/sponsors/carolinacreates.png" alt="" class="img-responsive" id="cc">
+                                    </a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-offset-2 col-md-4">
-                                    <a href="http://www.getpebble.com" target="_blank"><img src="images/sponsors/pebble.png" alt="" class="img-responsive" id="pebble"></a>
+                                    <a href="http://www.getpebble.com" target="_blank">
+                                        <img src="images/sponsors/pebble.png" alt="" class="img-responsive" id="pebble">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="http://www.sendgrid.com" target="_blank"><img src="images/sponsors/sendgrid.png" alt="" class="img-responsive" id="sendgrid"></a>
+                                    <a href="http://www.sendgrid.com" target="_blank">
+                                        <img src="images/sponsors/sendgrid.png" alt="" class="img-responsive" id="sendgrid">
+                                    </a>
                                 </div>
                             </div>
-							<div class="row">
+                            <div class="row">
                                 <div class="col-md-offset-2 col-md-4">
-                                    <a href="http://www.infusion.com" target="_blank"><img src="images/sponsors/infusion.png" alt="" class="img-responsive" id="infusion"></a>
+                                    <a href="http://www.infusion.com" target="_blank">
+                                        <img src="images/sponsors/infusion.png" alt="" class="img-responsive" id="infusion">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="http://www.metlife.com" target="_blank"><img src="images/sponsors/metlife.png" alt="" class="img-responsive" id="metlife"></a>
+                                    <a href="http://www.metlife.com" target="_blank">
+                                        <img src="images/sponsors/metlife.png" alt="" class="img-responsive" id="metlife">
+                                    </a>
                                 </div>
                             </div>
-							<div class="row">
+                            <div class="row">
                                 <div class="col-md-offset-2 col-md-4">
-                                    <a href="http://www.kitware.com" target="_blank"><img src="images/sponsors/kitware.png" alt="" class="img-responsive" id="kitware"></a>
+                                    <a href="http://www.kitware.com" target="_blank">
+                                        <img src="images/sponsors/kitware.png" alt="" class="img-responsive" id="kitware">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="http://www.monsterenergy.com" target="_blank"><img src="images/sponsors/monsterenergy.png" alt="" class="img-responsive" id="monsterenergy"></a>
+                                    <a href="http://www.monsterenergy.com" target="_blank">
+                                        <img src="images/sponsors/monsterenergy.png" alt="" class="img-responsive" id="monsterenergy">
+                                    </a>
                                 </div>
                             </div>
-							<div class="row">
-                                <div class="col-md-offset-3 col-md-6">
-                                    <a href="http://innovate.unc.edu" target="_blank"><img src="images/sponsors/innovatecarolina.jpg" alt="" class="img-responsive" id="innovatecarolina"></a>
-                                </div>
-							</div>
                             <div class="row">
                                 <div class="col-md-offset-4 col-md-4">
-                                    <a href="http://www.modolabs.com" target="_blank"><img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive" id="modolabs"></a>
+                                    <a href="http://innovate.unc.edu" target="_blank">
+                                        <img src="images/sponsors/innovatecarolina.jpg" alt="" class="img-responsive" id="innovatecarolina">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-offset-4 col-md-4">
+                                    <a href="http://www.modolabs.com" target="_blank">
+                                        <img src="images/sponsors/modolabs.jpg" alt="" class="img-responsive" id="modolabs">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +237,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                         <div class="contact anchor" id="contact">
                             <h2>Get in touch</h2>
                             <hr>
@@ -234,8 +259,8 @@
         <!-- End Content -->
     </div>
     <footer class="footer">
-        <span>HackNC &copy; 2013 </span>| 
-        <span>site by <a href="http://www.chrishendel.com" target="_blank">Chris Hendel</a>
+        <span>HackNC &copy; 2013 </span>|
+        <span> site by <a href="http://www.chrishendel.com" target="_blank">Chris Hendel</a>
         </span>
     </footer>
     <script type="text/javascript" src="js/build/production.min.js"></script>
