--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
     <link href="css/build/production.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-    <title>HackNC</title>
+    <title>HackNC test</title>
 </head>
 
 <body data-spy="scroll" data-target="#nav" data-offset="400">
